tests/contract_testcases/polkadot/variables/test_variable_initializer_errors.sol
abstract contract test {
            uint x = 102;
            uint constant y = x + 5;
        }
// ---- Expect: diagnostics ----
// error: 3:31-32: cannot read contract variable 'x' in constant expression
